--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="middle-container">
       <div class="middle-container">
         <div class="profile">
-          <img src="C:\Users\guilh\Desktop\Udemy\Web Dev Bootcamp 2022\Web Dev\CSS - My Site\leo icon.png" alt="Leo Icon">
+          <img src="leo icon.png" alt="Leo Icon">
           <h2>Hello.</h2>
           <p>My name is Guilherme. I like to eat hot sauce until I shit myself and play music to my own diarrea screams 💩.</p>
         </div>
