--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
     <div class="top-container">
       <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
       <h1>I´m Guilherme</h1>
-      <p>a <span class="pro">pro</span>grammer</p>
+      <h2>a <span class="pro">pro</span>grammer</h2>
       <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
-      <img src="Images/mountain.png" alt="mountain-img">
+      <img class="mountain"src="Images/mountain.png" alt="mountain-img">
         </div>
 
     <div class="middle-container">
       <div class="middle-container">
         <div class="profile">
-          <img src="leo icon.png" alt="Leo Icon">
+          <img src="C:\Users\guilh\Desktop\Udemy\Web Dev Bootcamp 2022\Web Dev\CSS - My Site\leo icon.png" alt="Leo Icon">
           <h2>Hello.</h2>
-          <p>My name is Guilherme. I like to eat hot sauce until I shit myself and play music to my own diarrea screams 💩.</p>
+          <p class="greeting-p">My name is Guilherme. I like to eat hot sauce until I shit myself and play music to my own diarrea screams 💩.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="https://cdn-icons-png.flaticon.com/256/7024/7024205.png" alt="guitarplayer-pic">
+            <img class="guitar-img" src="https://cdn-icons-png.flaticon.com/256/7024/7024205.png" alt="guitarplayer-pic">
             <h3>Guitar</h3>
-            <p>Some Jazz and Blues, mostly random noises to ruin everyone else's day.</p>
+            <p class="">Some Jazz and Blues, mostly random noises to ruin everyone else's day. Some Jazz and Blues, mostly random noises to ruin everyone else's day.</p>
           </div>
           <br>
           <div class="skill-row">
-            <img class="" src="https://cdn-icons-png.flaticon.com/128/3367/3367895.png" alt="hotsauce/pic">
-            <h3>Strong Asshole</h3>
-            <p>I eat Hot Sauce every day at every meal, for years and years. So far no hemorrhoids.</p>
+            <img class="hotsauce-img" src="https://cdn-icons-png.flaticon.com/128/3367/3367895.png" alt="hotsauce/pic">
+            <h3 class="stronkasshole">Strong Asshole</h3>
+            <p class="">I eat Hot Sauce every day at every meal, for years and years. So far no hemorrhoids. I eat Hot Sauce every day at every meal, for years and years. So far no hemorrhoids.</p>
           </div>
           <br>
         </div>
@@ -46,7 +46,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Let me know of your anal fissures</h3>
-          <p>Together we can spread your cheeks wider</p>
+          <p class="cheeks">Together we can spread your cheeks wider</p>
           <a class="btn" href="mailto:guilhermersrferreira@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -56,7 +56,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© Guilherme Ferreira.</p>
+      <p class="trademark">©2022 Guilherme Ferreira.</p>
     </div>
 
   </body>
